# 2026_team20

./: .editorconfig  .gitattributes  .gitignore  .infisical.json  AGENTS.md  LICENSE  README.md  Taskfile.yml  docker-compose.yml  package.json  pnpm-lock.yaml  q  review_result.md
.gemini/: GEMINI.md
.github/: copilot-instructions.md
.github/skills/task-runner/: SKILL.md
.sisyphus/notepads/plot-platform/: learnings.md
Taskfile/: Taskfile.backend.yml  Taskfile.frontend.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt  test.db
backend/alembic/: env.py
backend/alembic/versions/: 002a45fbfe51_fix_rollback_logs_user_id_cascade.py  e263b4b4cc1f_history_service_schema_changes.py
backend/app/: main.py
backend/app/api/v1/: api.py  deps.py  utils.py
backend/app/api/v1/endpoints/: admin.py  auth.py  history.py  images.py  plots.py  search.py  sections.py  sns.py  social.py  stars.py
backend/app/core/: auth.py  config.py  database.py  supabase.py
backend/app/models/: __init__.py
backend/app/schemas/: __init__.py
backend/app/services/: cleanup_service.py  history_service.py  image_service.py  moderation_service.py  plot_service.py  search_service.py  section_service.py  snapshot_cleanup.py  snapshot_scheduler.py  social_service.py  star_service.py  user_service.py
backend/tests/: conftest.py  test_auth_fixtures_test.py  test_history.py  test_images.py  test_main.py  test_moderation.py  test_plots.py  test_sections.py
backend/tests/integration/: auth_test.py  history_test.py  plots_test.py  search_test.py  social_test.py  stars_test.py
backend/tests/unit/: history_service_test.py  image_service_test.py  moderation_service_test.py  plot_service_test.py  search_service_test.py  section_service_test.py  snapshot_cleanup_test.py  snapshot_scheduler_test.py  social_service_test.py  star_service_test.py
backend/typings/apscheduler/: __init__.pyi
backend/typings/apscheduler/schedulers/: background.pyi
backend/typings/apscheduler/triggers/: interval.pyi
backend/typings/apscheduler/triggers/cron/: __init__.pyi
docs/: FRONTEND_DEV_GUIDE.md.md  api-renew-feb13.md.bak  api.md  commit-prnaming-review.md  commit-prnaming-review.md.bak  plot-platform.md  renew-api.md  repo-version.md  review-result.md  リアルタイム実装.md  過去の遺物api.md
docs/frontend/: 00-hackathon-rules.md  01-tech-stack.md  02-directory-structure.md  03-component-design.md  04-api-architecture.md  05-styling-guide.md  06-testing-strategy.md  07-development-timeline.md  08-appendix.md  09-mock-development.md  10-realtime-editing.md  FRONTEND_DEV_GUIDE.md  README.md
docs/frontend/issues/: step1-day1.md  step2-day2.md  step3-day3.md  step4-day4.md  step5-day5.md  step6-day6.md  step7-day7.md
frontend/: .env.example  .gitignore  Dockerfile  biome.json  components.json  next.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vitest.config.ts
frontend/e2e/: auth.spec.ts  full-journey.spec.ts  mobile.spec.ts
frontend/patches/: y-supabase@0.0.4-7-alpha.patch
frontend/playwright-report/: index.html
frontend/src/: middleware.test.ts  middleware.ts
frontend/src/__tests__/: middleware.test.ts
frontend/src/app/: _sections.tsx  error.test.tsx  error.tsx  globals.css  globals.scss  layout.module.scss  layout.tsx  loading.test.tsx  loading.tsx  not-found.test.tsx  not-found.tsx  page.module.scss  page.tsx
frontend/src/components/: AuthButton.module.scss  AuthButton.tsx  CommentThread.module.scss  CommentThread.tsx  ForkButton.module.scss  ForkButton.tsx  HistorySidebar.module.scss  HistorySidebar.tsx  PlotCard.module.scss  PlotCard.tsx  PlotList.module.scss  PlotList.tsx  SearchBar.module.scss  SearchBar.tsx  SectionEditor.module.scss  SectionEditor.tsx  StarButton.module.scss  StarButton.tsx  TiptapEditor.module.scss  TiptapEditor.tsx  UserCard.module.scss  UserCard.tsx
frontend/src/hooks/: useAuth.ts  useComments.ts  useHistory.ts  usePlotRealtime.ts  usePlots.ts  useRealtimeSection.ts  useSearch.ts  useSection.ts  useSectionLock.ts  useSections.ts  useStar.ts  useUnsavedChanges.ts  useUser.ts  useYjs.ts
frontend/src/lib/: api.ts  constants.ts  query-keys.ts  utils.ts
frontend/src/mocks/: service.ts  (+1 more)
scripts/: deploy.sh
supabase/: seed.sql
supabase/migrations/: 001_initial_schema.sql
(+263 files in other folders)
