[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.0",
    "supabase",
    "PyJWT[crypto]",
    "httpx",
    "fastapi[standard]",
    "sqlalchemy",
    "uvicorn[standard]",
    "psycopg2-binary",
    "pytest",
]


[project.optional-dependencies]
dev = ["ruff", "basedpyright"]

# ============================================================
# Ruff (Linter + Formatter)
# ============================================================
[tool.ruff]
target-version = "py313"
line-length = 88
# Lint設定
[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
]
ignore = [
    "E501", # line too long
]
# isort設定
[tool.ruff.lint.isort]
known-first-party = ["app"]
# Format設定
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
# ============================================================
# basedpyright (Type Checker)
# ============================================================
[tool.basedpyright]
pythonVersion = "3.13"
venvPath = "."
venv = ".venv"
typeCheckingMode = "standard"
reportMissingImports = true
reportMissingTypeStubs = false
# 型チェックの対象/除外
include = ["app", "tests"]
exclude = ["**/__pycache__", "**/.venv"]
# 厳密さの調整（必要に応じて）
# reportUnknownMemberType = "warning"
# reportUnknownArgumentType = "warning"
